# bornholdt2011

./: Cargo.toml  Dockerfile  README.md
src/: animate.rs  main.rs  model.rs  parse_cl.rs
src/models/: animate.rs  bornholdt.rs  mod.rs  neighbor.rs  noise.rs  simple.rs
