[package]
name = "bornholdt"
version = "0.1.0"
authors = ["Hendrik Schawe <hendrik.schawe@uni-oldenburg.de>"]

[dependencies]
rand = "*"
clap = "*"
piston = "0.32.0"
pistoncore-glutin_window = "0.38.0"
# pistoncore-sdl2_window = "0.43.0"
piston2d-graphics = "0.21.1"
piston2d-opengl_graphics = "0.46.0"
fps_counter = "*"
