[package]
name = "bornholdt"
version = "0.1.0"
authors = ["Hendrik Schawe <hendrik.schawe@uni-oldenburg.de>"]

[dependencies]
rand = "*"
clap = "*"
piston = "0.35.0"
pistoncore-glutin_window = "0.42.0"
# pistoncore-sdl2_window = "*"
piston2d-graphics = "0.23.0"
piston2d-opengl_graphics = "0.49.0"
fps_counter = "*"
